# python-ai-driven-development-pipeline-template

./: .gitignore  .gitkeep  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
changelog.d/: 20251218_133759_drakonard_issue_1_3b50e2f12be6.md  20260509_204000_issue_6_release_metadata.md  20260515_000000_issue_8_docs_pages.md  20260529_222900_issue_9_preview_regeneration.md  20260604_170000_issue_16_release_notes_limit.md  20260609_000000_issue_18_manual_release_skip.md  20260614_000000_issue_20_published_package_smoke_test.md  20260614_issue_21_python_monorepo_releases.md  20260628_issue_24_file_size_warnings.md  20260703_issue_26_docs_pages_opt_in.md  20260703_issue_27_codecov_token_gate.md  20260703_issue_28_git_default_branch_env.md  20260722_issue_32_node24_actions.md  20260722_issue_33_release_permissions.md  20260722_issue_34_codecov_v7_input.md  20260722_issue_35_ci_release_guards.md  README.md  fragment_template.md.j2
docs/: api.md  conf.py  index.md  preview-regeneration.md  requirements.txt
examples/: basic_usage.py
scripts/: bump_version.py  check_file_size.py  create_github_release.py  create_manual_changeset.py  detect_code_changes.py  format_release_notes.py  publish_to_pypi.py  release_naming.py  simulate-fresh-merge.sh  smoke_test_published_package.py  validate_changeset.py  version_and_commit.py
src/my_package/: __init__.py
tests/: __init__.py  test_check_file_size.py  test_create_github_release.py  test_my_package.py  test_preview_regeneration_docs.py  test_simulate_fresh_merge.py  test_smoke_test_published_package.py  test_workflows.py
